--- a/DatasetShuttle.ipynb
+++ b/DatasetShuttle.ipynb
@@ -6,7 +6,7 @@
       "name": "Dataset-Shuttle.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAc9cZkvWEc9LLyWnX0QXg",
+      "authorship_tag": "ABX9TyP/9OAiP37cK3LdtvumHmrU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,26 +79,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "321c8e0d-1b8a-4d86-d842-2e0507978efa"
+        "outputId": "4fecad27-39d8-48b6-9ce8-6acc70c9e2b1"
       },
       "source": [
         "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.doc"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-06-30 20:26:24--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.doc\n",
+            "--2020-07-03 12:42:29--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.doc\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1273 (1.2K) [application/x-httpd-php]\n",
             "Saving to: ‘shuttle.doc’\n",
             "\n",
-            "\rshuttle.doc           0%[                    ]       0  --.-KB/s               \rshuttle.doc         100%[===================>]   1.24K  --.-KB/s    in 0s      \n",
+            "shuttle.doc         100%[===================>]   1.24K  --.-KB/s    in 0s      \n",
             "\n",
-            "2020-06-30 20:26:25 (48.1 MB/s) - ‘shuttle.doc’ saved [1273/1273]\n",
+            "2020-07-03 12:42:29 (40.3 MB/s) - ‘shuttle.doc’ saved [1273/1273]\n",
             "\n"
           ],
           "name": "stdout"
@@ -114,12 +114,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 714
         },
-        "outputId": "de930166-ceac-4ac9-a5f6-0a93f623e476"
+        "outputId": "f9a2013c-c630-4175-dc32-04e7ccf550e4"
       },
       "source": [
         "!cat shuttle.doc"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,26 +189,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "914ce236-c467-43cb-a9f6-9e08e41827b2"
+        "outputId": "56e1a8c7-0196-403a-d88f-02e0a327d6cb"
       },
       "source": [
         "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.trn.Z"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-06-30 20:21:24--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.trn.Z\n",
+            "--2020-07-03 12:42:32--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.trn.Z\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 319869 (312K) [application/x-httpd-php]\n",
             "Saving to: ‘shuttle.trn.Z’\n",
             "\n",
-            "shuttle.trn.Z       100%[===================>] 312.37K  1.19MB/s    in 0.3s    \n",
+            "shuttle.trn.Z       100%[===================>] 312.37K   550KB/s    in 0.6s    \n",
             "\n",
-            "2020-06-30 20:21:24 (1.19 MB/s) - ‘shuttle.trn.Z’ saved [319869/319869]\n",
+            "2020-07-03 12:42:33 (550 KB/s) - ‘shuttle.trn.Z’ saved [319869/319869]\n",
             "\n"
           ],
           "name": "stdout"
@@ -224,26 +224,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "5c871c7d-64ad-4a32-8e98-0472840221b9"
+        "outputId": "78e5bd61-e49a-48e7-837b-4875686e1b93"
       },
       "source": [
         "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-06-30 20:21:38--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst\n",
+            "--2020-07-03 12:42:34--  https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 384257 (375K) [application/x-httpd-php]\n",
             "Saving to: ‘shuttle.tst’\n",
             "\n",
-            "shuttle.tst         100%[===================>] 375.25K  1.14MB/s    in 0.3s    \n",
+            "shuttle.tst         100%[===================>] 375.25K   664KB/s    in 0.6s    \n",
             "\n",
-            "2020-06-30 20:21:38 (1.14 MB/s) - ‘shuttle.tst’ saved [384257/384257]\n",
+            "2020-07-03 12:42:35 (664 KB/s) - ‘shuttle.tst’ saved [384257/384257]\n",
             "\n"
           ],
           "name": "stdout"
@@ -259,17 +259,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d3ebd24f-40cc-4f4d-9ca6-402c6e4f3035"
+        "outputId": "091792b3-98b3-4e35-b247-72d12830b976"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "sample_data  shuttle.trn  shuttle.tst\n"
+            "sample_data  shuttle.doc  shuttle.trn.Z  shuttle.tst\n"
           ],
           "name": "stdout"
         }
@@ -285,7 +285,7 @@
       "source": [
         "!uncompress *.Z"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -308,7 +308,7 @@
       "source": [
         "header = ['TIME', 'X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'CLASS']"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "train_df = pd.read_csv('shuttle.trn', delimiter=' ', names=header)\n",
         "test_df  = pd.read_csv('shuttle.tst', delimiter=' ', names=header)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
         "train_df['OUTLIER'] = np.where(train_df.CLASS > 1, 1, 0)\n",
         "test_df ['OUTLIER'] = np.where(test_df.CLASS > 1, 1, 0)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -352,15 +352,43 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "VmD1Is_PsgZt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mkdir -p data"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fe32Mgse65j-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "train_df.to_csv('data_anomaly_shuttle_train.csv', index=False)\n",
-        "test_df.to_csv('data_anomaly_shuttle_test.csv',  index=False)"
+        "train_df.to_csv('data/data_anomaly_shuttle_train.csv', index=False)\n",
+        "test_df.to_csv('data/data_anomaly_shuttle_test.csv',  index=False)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ttHpmYZRsqgm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "combined_df = pd.concat([train_df, test_df])\n",
+        "combined_df.head()\n",
+        "combined_df.to_csv('data/data_anomaly_shuttle.csv', index=False)"
+      ],
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -370,24 +398,36 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 34
         },
-        "outputId": "d028a8e1-1d7f-41ee-e590-cdce31f91f7e"
+        "outputId": "410dd30b-b5d5-48a0-dbd0-91e52980bad4"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "data_anomaly_shuttle_test.csv\tsample_data  shuttle.trn\n",
-            "data_anomaly_shuttle_train.csv\tshuttle.doc  shuttle.tst\n"
+            "data  sample_data  shuttle.doc\tshuttle.trn  shuttle.tst\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "izGfAlFus9Rn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
